Allow to configure whether the directory shown in the console is kept synchronized with the document tabs

BUG: 265165